[metadata]
name = lite-tools
version = attr: lite_tools.version.VERSION
author = Lodge
author_email = lodgeheartfilia@163.com
description = 一些自己常用的小工具包
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Heartfilia/lite_tools
classifiers =
    Intended Audience :: Developers
    Operating System :: OS Independent
    Natural Language :: Chinese (Simplified)
    Programming Language :: Python :: 3.8+
license = MIT


[options]
python_requires = >=3.8
packages =
    lite_tools
    lite_tools.commands
    lite_tools.commands.acg
    lite_tools.commands.flush
    lite_tools.commands.fresh
    lite_tools.commands.news
    lite_tools.commands.today
    lite_tools.commands.trans
    lite_tools.commands.weather
    lite_tools.commands.whsecret
    lite_tools.tools
    lite_tools.tools.js
    lite_tools.tools.sql
    lite_tools.tools.core
    lite_tools.tools.time
    lite_tools.tools.utils
    lite_tools.exceptions
install_requires =
    pydantic
    loguru
    requests
    urllib3
    colorama
    prettytable
    datetime
    lxml
    redis
    pyyaml
    pymysql>=1.0.2
    dbutils>=3.0.2
    func_timeout
    httpx[http2]

[options.entry_points]
console_scripts =
    lite-tools = lite_tools.commands.cmdline:execute

[options.extras_require]
all =
    reportlab
    Pillow
