[project]
name = "lite-tools"
version = "0.4.11.5-beta1"
description = "一些让你效率提升的小工具集合包[还在持续增加及优化]"
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }
authors = [
    { name = "Lodge", email = "lodgeheartfilia@163.com" }
]

classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Natural Language :: Chinese (Simplified)",
    "Programming Language :: Python :: 3"
]
dependencies = [
    "loguru",
    "prettytable",
    "datetime"
]

[project.urls]
homepage = "https://github.com/Heartfilia/lite_tools"

[project.optional-dependencies]
net = [
    "pymysql",
    "pyyaml",
    "redis",
    "requests",
    "urllib3",
    "usepy",
    "lxml",
    "dbutils",
    "aiomysql"
]
all = [
    "colorama",
    "pydantic",
    "reportlab",
    "Pillow",
    "pymysql",
    "pyyaml",
    "redis",
    "requests",
    "urllib3",
    "usepy",
    "lxml",
    "dbutils",
    "aiomysql"
]

[project.scripts]
lite-tools = "lite_tools.commands.cmdline:execute"

[tool.setuptools.packages.find]
where = ["."]
include = [
#    "lite_tools",
    "commands",
    "commands.dictionary",
    "commands.flush",
    "commands.fresh",
    "commands.news",
    "commands.today",
    "commands.trans",
    "commands.weather",
    "commands.whsecret",
    "exceptions",
    "logs",
    "tools",
    "tools.js",
    "tools.sql",
    "tools.core",
    "tools.time",
    "utils"
]
